--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "node-cron": "^2.0.3",
     "node-env": "^0.1.6",
+    "nodemailer": "^6.4.17",
     "pm2": "^4.5.0",
     "puppeteer": "^5.5.0",
     "winston": "^3.3.3"
